- fixed periodic auras again (they cannot be "activated")
- to test: DruidFeralCombatInfectedWounds, DruidFeralCombatKingOfTheJungle