@@ -23,7 +23,7 @@ namespace WCell.RealmServer.Spells.Auras.Handlers
 {
 	public class ModPowerRegenHandler : AuraEffectHandler
 	{
-		protected internal override void CheckInitialize(ObjectReference casterReference, Unit target, ref SpellFailedReason failReason)
+		protected internal override void CheckInitialize(SpellCast creatingCast, ObjectReference casterReference, Unit target, ref SpellFailedReason failReason)
 		{
 			var type = (PowerType)m_spellEffect.MiscValue;
 			if (target.PowerType != type)
