@@ -28,7 +28,7 @@ namespace WCell.RealmServer.Spells.Auras.Handlers
 	{
 		ShapeshiftForm form;
 
-		protected internal override void CheckInitialize(ObjectReference casterReference, Unit target, ref SpellFailedReason failReason)
+		protected internal override void CheckInitialize(SpellCast creatingCast, ObjectReference casterReference, Unit target, ref SpellFailedReason failReason)
 		{
 			form = (ShapeshiftForm)SpellEffect.MiscValue;
 			if (target.ShapeshiftForm == form)
